Added construction header message

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="./main.css">
     </head>
     <body>
+        <h1>Under Construction</h1>
         <video class="bg" loop autoplay muted src="./Assets/gdan_bg.mp4"></video>
     </body>
 </html>
