Added event staff section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,76 @@
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-header">FAQ</div>
-                        </div>
+                            <div class="content-subheader">Can I host collabs/be a part of them?</div>
+                            <div class="carousel-content">Absolutely! There's no limit to this.</div>
+                            <div class="content-subheader">Can I invite anyone I want?</div>
+                            <div class="carousel-content">Please do! The more, the merrier!</div>
+                            <div class="content-subheader">How will I get my level sent?</div>
+                            <div class="carousel-content">After the event, the Judge team will be reviewing levels to see every entry and the best entries will be sent.</div>
+                            <div class="content-subheader">Can I start with a layout?</div>
+                            <div class="carousel-content">No, the entire level must be made within the 24 hours, including the layout.</div>
+                            <div class="content-subheader">Can I use a NONG?</div>
+                            <div class="content-content">No.</div>
+                            <div class="content-subheader">How many levels can I participate/build in?</div>
+                            <div class="content-content">As many as you'd like!</div>
+                            <div class="content-subheader">What happens if I don't finish my entry by the 24-hour mark?</div>
+                            <div class="content-content">Keep working on it! Even if it doesn't end up getting finished, you can continue the level later.</div>
+                            <div class="content-subheader">What happens if something goes wrong?</div>
+                            <div class="content-content">Contact eviroze, Slopes, or an Event Staff.</div>
+                            <div class="content-subheader">Does our level/description have to be/have something specific?</div>
+                            <div class="content-content">The description has to mention that it's a level for GD All Nighter, as well as the endscreen needing to have the GDAN logo (which you can find the ID for in the Rules and Assets page, but otherwise, you have free will)!</div>
+                            </div>
                         <div class="carousel-item">
                             <h2 class="carousel-header">Staff</h2>
+                            <div class="carousel-subheader">Hosts</div>
+                               <div class="stafflist-wrapper">
+
+
+                                    <div class="user-container">
+                                        <p class="user-label">placeholder</p>
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png">
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                        </div>
+                                    </div>
+
+                                </div>
+                            <div class="carousel-subheader">Judges</div>
+                            <div class="stafflist-wrapper">
+
+
+                                <!--User Info Start-->
+                                    <div class="user-container">
+                                        <p class="user-label">placeholder</p>
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png">
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                        </div>
+                                    </div>
+                                <!--User Info Start-->
+
+                                </div>
+                            <div class="carousel-subheader">Other Staff</div>
+                            <div class="stafflist-wrapper">
+
+                                    <div class="user-container">
+                                        <p class="user-label">placeholder</p>
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png">
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                        </div>
+                                    </div>
+
+                                </div>
                         </div>
                         <div class="carousel-item">
                             <h2 class="carousel-header">Assets</h2>
