Changed navbar buttons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div id="homepage-navbar" class="homepage-navbar">
             <img src="./Assets/gdAllNighterHDShadow.png" class="navbar-logo" id="navbar-logo">
-            <div class="homepage-navbar-item">Submit</div>
-            <div class="homepage-navbar-item">Donate</div>
-            <div class="homepage-navbar-item">Discord</div>
+            <div class="homepage-navbar-item" id="navbar-submit-button">Submit</div>
+            <div class="homepage-navbar-item" id="navbar-donate-button">Donate</div>
+            <div class="homepage-navbar-item" id="navbar-discord-button">Discord</div>
         </div>
 
         <div class="wrapper wrapper-main-content">
