labeled staff container

--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
 
                                 <!--User Info Start-->
                                     <div class="user-container">
-                                        <p class="user-label">placeholder</p>
-                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png">
+                                        <p class="user-label">placeholder</p> <!--Change placeholder to staff name-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
-                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
                                         </div>
                                     </div>
-                                <!--User Info Start-->
+                                <!--User Info End-->
 
                                 </div>
                             <div class="carousel-subheader">Other Staff</div>
