--- a/index.html
+++ b/index.html
@@ -69,14 +69,21 @@
                             <div class="carousel-subheader">Hosts</div>
                                <div class="stafflist-wrapper">
 
-
+                                    <div class="user-container">
+                                        <p class="user-label">eviroze</p> <!--Change placeholder to staff name-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/rozedr1k.png"> <!--Change /placeholder.png to pfp image-->
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/eviroze'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/evirozee');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@eviroze')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                        </div>
+                                    </div>
+                                   
                                     <div class="user-container">
                                         <p class="user-label">Slopes</p>
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/slopes.jpg">
                                         <div class="user-socials-wrapper">
-                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/Slopes'), _blank;">
                                             <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
                                         </div>
                                     </div>
@@ -88,7 +95,40 @@
 
                                 <!--User Info Start-->
                                     <div class="user-container">
-                                        <p class="user-label">placeholder</p> <!--Change placeholder to staff name-->
+                                        <p class="user-label">Halapeenyo</p> <!--Change placeholder to staff name-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png"> <!--Change /placeholder.png to pfp image-->
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                        </div>
+                                    </div>
+
+                                    <div class="user-container">
+                                        <p class="user-label">RavingRafters</p> <!--Change placeholder to staff name-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/raving.png"> <!--Change /placeholder.png to pfp image-->
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                        </div>
+                                    </div>
+
+                                    <div class="user-container">
+                                        <p class="user-label">Waffl3X</p> <!--Change placeholder to staff name-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png"> <!--Change /placeholder.png to pfp image-->
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                        </div>
+                                    </div>
+
+                                <div class="user-container">
+                                        <p class="user-label">YraX</p> <!--Change placeholder to staff name-->
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
@@ -104,7 +144,18 @@
                             <div class="stafflist-wrapper">
 
                                     <div class="user-container">
-                                        <p class="user-label">placeholder</p>
+                                        <p class="user-label">underscored</p>
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/underscored_v2.png">
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                        </div>
+                                    </div>
+
+                                <div class="user-container">
+                                        <p class="user-label">Prism</p>
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png">
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
@@ -114,6 +165,28 @@
                                         </div>
                                     </div>
 
+                                <div class="user-container">
+                                        <p class="user-label">Galacty</p>
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png">
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                        </div>
+                                    </div>
+
+                                <div class="user-container">
+                                        <p class="user-label">acezure</p>
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png">
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                        </div>
+                                    </div>
+                                
                                 </div>
                         </div>
                         <div class="carousel-item">
