fixed logo being stretched again

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html lang="en">
     <head>
+        <!--GD ALL NIGHTER WEBSITE-->
+        <!--      Developed by    -->
+        <!--       Whippie37       -->
         <script src="./main.js"></script>
         <link rel="stylesheet" href="./main.css">
         <link rel="icon" href="./Assets/icon.ico">
