--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                                 <div class="user-container">
                                         <p class="user-label">YraX</p> <!--Change placeholder to staff name-->
-                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/placeholder.png"> <!--Change /placeholder.png to pfp image-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/yrax.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/YraX'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
                                             <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
