--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                <div class="stafflist-wrapper">
 
                                     <div class="user-container">
-                                        <p class="user-label">eviroze</p> <!--Change placeholder to staff name-->
+                                        <p class="user-label">herozer</p> <!--Change placeholder to staff name-->
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/herozer pfp 2 1k.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/herozer'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
