--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html lang="en">
     <head>
-        <!--GD ALL NIGHTER WEBSITE-->
         <!--      Developed by    -->
-        <!--       Whippie37       -->
+        <!--       Whippie37      -->
         <script src="./main.js"></script>
         <link rel="stylesheet" href="./main.css">
         <link rel="icon" href="./Assets/icon.ico">
@@ -73,12 +72,12 @@
                                <div class="stafflist-wrapper">
 
                                     <div class="user-container">
-                                        <p class="user-label">herozer</p> <!--Change placeholder to staff name-->
-                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/herozer pfp 2 1k.png"> <!--Change /placeholder.png to pfp image-->
+                                        <p class="user-label">eviroze</p> <!--Change placeholder to staff name-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/rozedr1k.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
-                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/herozer'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/herozerr');"> <!--Change /placeholder to /[twitterusername]-->
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@herozer')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/eviroze'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/evirozee');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@eviroze')"> <!--Change /@placeholder to /@[youtubeuser]-->
                                         </div>
                                     </div>
                                    
