"fixed" start/end time

--- a/timer.html
+++ b/timer.html
@@ -2,8 +2,8 @@
     <link rel="stylesheet" href="./main.css">
     <script>
         let time = '';
-        let startTime = '1766579880000';
-        let endTime = '1766579880000';
+        let startTime = '0';
+        let endTime = '0';
         let interval = null;
         function init() {
             updateTimer();
