--- a/timer.html
+++ b/timer.html
@@ -1,5 +1,8 @@
 <head>
     <link rel="stylesheet" href="./main.css">
+    <link rel="icon" href="./Assets/icon.ico">
+    <title>GD All Nighter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <script>
         let time = '';
         let startTime = '0';
