Added Results Page

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div id="homepage-navbar" class="homepage-navbar">
             <img src="./Assets/gdAllNighterHDShadow.png" class="navbar-logo" id="navbar-logo">
-            <div class="homepage-navbar-item" id="navbar-submit-button">Submit</div>
-            <div class="homepage-navbar-item" id="navbar-donate-button">Donate</div>
-            <div class="homepage-navbar-item" id="navbar-discord-button">Discord</div>
+            <a href="https:/\/forms.gle/9aqQXJZChhe7Qt6B8" target="_blank" class="homepage-navbar-item" id="navbar-submit-button">Submit</a>
+            <a href = "https://streamlabscharity.com/@herozer/geometry-dash-all-nighter-vol-2" target="_blank" class="homepage-navbar-item" id="navbar-donate-button">Donate</a>
+            <a href = "https://discord.gg/mUTpD5hsWH" target="_blank" class="homepage-navbar-item" id="navbar-discord-button">Discord</a>
         </div>
 
         <div class="wrapper wrapper-main-content">
@@ -196,6 +196,8 @@
                         </div>
                         <div class="carousel-item">
                             <h2 class="carousel-header">Previous Results</h2>
+                                <iframe class="results-video" src="https://www.youtube.com/embed/n2QrLQnkS6k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe class="results-video" src="https://www.youtube.com/embed/rxGFRzvhvEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
 
                     </div>
