aight wtf am I doing

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                                 </div>
                             <div class="carousel-subheader">Judges</div>
-          herozerstafflist-wrapper">
+                            <div class="stafflist-wrapper">
 
 
                                 <!--User Info Start-->
