Added socials + Gramix

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/slopes.jpg">
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/Slopes'), _blank;">
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@gdslopes')">
                                         </div>
                                     </div>
 
@@ -101,9 +101,9 @@
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/IMG_1976.jpg"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/Halapeenyo'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/Halapeenyo'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/HalapeenyoYT');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@HalapeenyoGD')"> <!--Change /@placeholder to /@[youtubeuser]-->
                                         </div>
                                     </div>
 
@@ -112,9 +112,9 @@
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/raving.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/RavingRafters'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/ravingrafters'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/RavingRafters');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@ravingrafters')"> <!--Change /@placeholder to /@[youtubeuser]-->
                                         </div>
                                     </div>
 
@@ -123,9 +123,8 @@
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/waffl3x.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/Waffl3X'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/waffl3_'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@Waffl3X')"> <!--Change /@placeholder to /@[youtubeuser]-->
                                         </div>
                                     </div>
 
@@ -134,9 +133,9 @@
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/yrax.png"> <!--Change /placeholder.png to pfp image-->
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/YraX'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');"> <!--Change /placeholder to /[twitterusername]-->
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/yraxxxx'), _blank;"> <!--Change /placeholder to /[twitchusername]-->
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/YraXxxxx');"> <!--Change /placeholder to /[twitterusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@YraXxx')"> <!--Change /@placeholder to /@[youtubeuser]-->
                                         </div>
                                     </div>
                                 <!--User Info End-->
@@ -150,20 +149,26 @@
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/underscored_v2.png">
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/TechStudent10'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@TechStudent12')">
                                         </div>
                                     </div>
 
+                                <div class="user-container">
+                                        <p class="user-label">Gramix</p> <!--Change placeholder to staff name-->
+                                        <img class = "user-icon" src="./Assets/Staff Profile Pictures/gramix.jpg"> <!--Change /placeholder.png to pfp image-->
+                                        <div class="user-socials-wrapper">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/GramixGD'), _blank;"> <!--Change /u/placeholder to /u/[gdusername]-->
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@realgramix')"> <!--Change /@placeholder to /@[youtubeuser]-->
+                                        </div>
+                                </div>
+                                
                                 <div class="user-container">
                                         <p class="user-label">Prism</p>
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/prism.jpg">
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/Prism'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/PrismGMD');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@GSPrism')">
                                         </div>
                                     </div>
 
@@ -172,9 +177,8 @@
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/0a51f5dc2d952986ec0d88e363040a7d.jpg">
                                         <div class="user-socials-wrapper">
                                             <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/galactywannacry');">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@GalactyRe_')">
                                         </div>
                                     </div>
 
@@ -182,10 +186,8 @@
                                         <p class="user-label">acezure</p>
                                         <img class = "user-icon" src="./Assets/Staff Profile Pictures/acezure.png">
                                         <div class="user-socials-wrapper">
-                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitch-icon.png" onclick="window.open('https:\/\/www.twitch.tv\/placeholder'), _blank;">
-                                            <img class="user-socials" src="./Assets/twitter-icon.png" onclick="window.open('https:/\/www.x.com/placeholder');">
-                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@placeholder')">
+                                            <img class="user-socials" src="./Assets/gd-icon.png" onclick="window.open('https:/\/www.gdbrowser.com/u/acezure'), _blank;">
+                                            <img class="user-socials" src="./Assets/youtube-icon.png" onclick="window.open('https:/\/youtube.com/@acezure')">
                                         </div>
                                     </div>
                                 
