--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="content-subheader">What happens if I don't finish my entry by the 24-hour mark?</div>
                             <div class="carousel-content">Keep working on it! Even if it doesn't end up getting finished, you can continue the level later.</div>
                             <div class="content-subheader">What happens if something goes wrong?</div>
-                            <div class="carousel-content">Contact eviroze, Slopes, or an Event Staff.</div>
+                            <div class="carousel-content">Contact herozer, Slopes, or an Event Staff.</div>
                             <div class="content-subheader">Does our level/description have to be/have something specific?</div>
                             <div class="carousel-content">The description has to mention that it's a level for GD All Nighter, as well as the endscreen needing to have the GDAN logo (which you can find the ID for in the Rules and Assets page, but otherwise, you have free will)!</div>
                             </div>
